--- a/templates/home.html
+++ b/templates/home.html
@@ -77,7 +77,7 @@
       <div id="about">
         <div class="row workingspace">
           <div class="col-lg-6">
-            <img src="{{ url_for('static',filename='img/smuit300.jpeg')}}" class="img-fluid">
+            <img src="{{ url_for('static',filename='img/smuit300.jpg')}}" class="img-fluid">
             </div>
 
             <div class="col-lg-5">
