--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
   <body>
     <!-- Navbar -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
     <a class="navbar-brand" href="#home">SMUIT</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,22 +56,22 @@
 
 
       <!-- Info Panel -->
-      <div id="features">
         <div class="row justify-content-center">
           <div class="col-10 info-panel">
-            <div class="row">
-              <div class="col-lg">
-                <center>
+            <div id="features">
+              <div class="row">
                 <div class="col-lg">
-                <img src="{{ url_for('static',filename='img/employee.png')}}" alt="employee" class="float-left">
-                  <h4>24 Hours</h4>
-                  <p>Chatbot yang siap mewawancarai kapanpun dan dimanapun.</p>
-                </div>
-                </center>                
+                  <center>
+                  <div class="col-lg">
+                  <img src="{{ url_for('static',filename='img/employee.png')}}" alt="employee" class="float-left">
+                    <h4>24 Hours</h4>
+                    <p>Chatbot yang siap mewawancarai kapanpun dan dimanapun.</p>
+                  </div>
+                  </center>                
+              </div>
             </div>
           </div>
-        </div>
-      </div> 
+        </div> 
 
       <!-- Workspace -->
       <div id="about">
@@ -126,7 +126,7 @@
                   <figcaption class="figure-caption">
                     <h5>M. Farhan</h5>
                     <p>Data Engineer</p>
-                    <p><a href ="www.linkedin.com/in/farhanadit14">Linkedin</a></p>
+                    <p><a href ="https://www.linkedin.com/in/muhammad-farhan-aditama-54092a208/">Linkedin</a></p>
                   </figcaption>
                 </figure>
 
