--- a/templates/home.html
+++ b/templates/home.html
@@ -107,7 +107,7 @@
                   <figcaption class="figure-caption">
                     <h5>David K. H</h5>
                     <p>Data Scientist</p>
-                    <p><a href ="www.linkedin.com/in/davidkevinhutabarat">Linkedin</a></p>
+                    <p><a href ="https://www.linkedin.com/in/davidkevinhutabarat/">Linkedin</a></p>
                   </figcaption>
                 </figure>
 
